--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 image: golang:1.8-alpine
 
 before_script:
+  - apk update
+  - apk add git
   - go get github.com/tools/godep
   - cp -r $CI_PROJECT_DIR /go/src/git.dolansoft.org/$CI_PROJECT_PATH
   - cd /go/src/git.dolansoft.org/$CI_PROJECT_PATH
