--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
 image: golang:1.8-alpine
 
+variables:
+  GO_PROJECT_PATH: '/go/src/git.dolansoft.org/$CI_PROJECT_PATH'
+
 before_script:
   - apk update
   - apk add git
   - go get github.com/tools/godep
-  - cp -r $CI_PROJECT_DIR /go/src/git.dolansoft.org/$CI_PROJECT_PATH
-  - cd /go/src/git.dolansoft.org/$CI_PROJECT_PATH
+  - mkdir -p $GO_PROJECT_PATH
+  - cp -r $CI_PROJECT_DIR $GO_PROJECT_PATH
+  - cd $GO_PROJECT_PATH
 
 test:
   stage: test
