--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ before_script:
   - apk add git
   - go get github.com/tools/godep
   - mkdir -p $GO_PROJECT_PATH
+  - rmdir $GO_PROJECT_PATH
   - cp -rT $CI_PROJECT_DIR $GO_PROJECT_PATH
   - cd $GO_PROJECT_PATH
 
