--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
   GO_PROJECT_PATH: '/go/src/git.dolansoft.org/$CI_PROJECT_PATH'
 
 before_script:
+  - echo $GO_PROJECT_PATH
   - apk update
   - apk add git
   - go get github.com/tools/godep
