--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,14 @@ before_script:
   - cp -r $CI_PROJECT_DIR $GO_PROJECT_PATH
   - cd $GO_PROJECT_PATH
 
+build-protos:
+  stage: build
+  script:
+    - go get -u github.com/golang/protobuf/{proto,protoc-gen-go}
+    - go get -u google.golang.org/grpc
+    - mkdir pb
+    - protoc *.proto --go_out=plugins=grpc:../pb
+
 test:
   stage: test
   script:
