--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ before_script:
 build-protos:
   stage: build
   script:
-    - go get -u github.com/golang/protobuf/{proto,protoc-gen-go}
+    - go get -u github.com/golang/protobuf/proto
+    - go get -u github.com/golang/protobuf/protoc-gen-go
     - go get -u google.golang.org/grpc
     - mkdir pb
     - protoc *.proto --go_out=plugins=grpc:../pb
