--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
 before_script:
   - echo $GO_PROJECT_PATH
   - apk update
-  - apk add git
+  - apk add git protoc
   - go get github.com/tools/godep
   - mkdir -p $GO_PROJECT_PATH
   - rmdir $GO_PROJECT_PATH
