--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,7 @@ variables:
 
 before_script:
   - echo $GO_PROJECT_PATH
-  - apk update
-  - apk add git
-  - apk add protoc
+  - apk --update add git protobuf
   - go get github.com/tools/godep
   - mkdir -p $GO_PROJECT_PATH
   - rmdir $GO_PROJECT_PATH
