--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,9 @@ build-protos:
     - go get -u github.com/golang/protobuf/protoc-gen-go
     - go get -u google.golang.org/grpc
     - mkdir pb
+    - cd protos
     - protoc *.proto --go_out=plugins=grpc:../pb
+    - cd ..
 
 test:
   stage: test
